# Mangatan

./: README.md  desktop-script.user.js
ocr-server/: engines.py  pyproject.toml  server.py
ocr-server-legacy/: server.js
