[project]
name = "ocr-server"
version = "0.1.0"
description = "Server for performing OCR on images"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "betterproto>=2.0.0b7",
    "chrome-lens-py>=3.2.0",
    "flask[async]>=3.1.1",
    "manga-ocr>=0.1.14",
    "oneocr>=1.0.9",
    "onnxruntime>=1.23.2",
    "opencv-python-headless>=4.12.0.88",
    "requests>=2.32.4",
    "waitress>=3.0.2",
]

[dependency-groups]
dev = [
    "nuitka>=2.7.12",
    "pytest>=8.4.1",
]
